# hattrick_game

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
hattrick_client/: Cargo.toml
hattrick_client/src/: main.rs  packets.rs
hattrick_packets_lib/: Cargo.toml
hattrick_packets_lib/benches/: benchmark.rs
hattrick_packets_lib/src/: clientinfo.rs  clientstate.rs  gamestate.rs  gametypes.rs  keystate.rs  lib.rs  packets.rs  pong.rs  tank.rs  team.rs
hattrick_server/: Cargo.toml
hattrick_server/src/: main.rs  packets.rs
hattrick_server/src/ai/: game_ai.rs  mod.rs  pong_ai.rs
