[package]
name = "hattrick_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.24"
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.86"
once_cell = "1.15.0"
uuid = "1.2.1"
hattrick_packets_lib = { path = "../hattrick_packets_lib" }



