[package]
name = "hattrick_packets_lib"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["dep:macroquad"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.86"
macroquad = { version = "0.3.24", optional = true }
rand = "0.8.5"

