[package]
name = "hattrick_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.86"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
overflow-checks = true
opt-level = 3
strip = true
debug-assertions = false
lto = true