[package]
name = "hattrick_server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.86"
once_cell = "1.15.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
hattrick_packets_lib = { path = "../hattrick_packets_lib" }
rand = "0.8.5"

